<resources xmlns:android="http://schemas.android.com/apk/res/android">
    <string name="hello_world">Hello world!</string>
    <string name="test_store_name">苏宁广场</string>
    <string name="test_name">张三</string>
    <string name="test_number">13951631759</string>
    <string name="test_lvl">盒装正品销售店</string>
    <string name="test_email">zhangsan2000@gmail.com</string>
    <string name="test_text">文字显示测试</string>
    <string name="test_type_oem">OEM</string>
    <string name="title_activity_local_dbtest">LocalDBTestActivity</string>
    <string name="title_activity_html">HtmlActivity</string>
    <string name="title_activity_html_test">HtmlTestActivity</string>
    <string name="app_name">零售宝</string>
    <string name="action_settings">设置</string>
    <string name="waiting">请稍等</string>
    <string name="empty">暂无数据</string>
    <string name="comm_add">添加</string>
    <string name="comm_edit">编辑</string>
    <string name="comm_select_all">全选</string>
    <string name="comm_delete">删除</string>
    <string name="comm_ok">确定</string>
    <string name="comm_retry">重试</string>
    <string name="comm_request_timeout">请求超时</string>
    <string name="comm_no_internet">网络错误，请重试</string>
    <string name="comm_back">返回</string>
    <string name="text_check_net_sdcard">请检查网络连接或者SD卡是否存在</string>
    <string name="comm_click_screen_retry">点击屏幕重试</string>
    <string name="txt_yes">是</string>
    <string name="txt_no">否</string>
    <string name="txt_county">区/县</string>
    <string name="txt_city">市</string>
    <string name="txt_province">省</string>
    <string name="comm_txt_server_error">服务器异常</string>
    <string name="comm_txt_check_network">手机未能联网，打开网络设置？</string>
    <string name="comm_txt_abnormal">异常信息</string>
    <string name="comm_txt_abnormal_data">异常数据</string>
    <string name="comm_txt_no_network">没有网络</string>
    <string name="txt_check_result">验证结果：</string>
    <string name="txt_fail_retry">数据加载失败，点击屏幕重新加载。</string>
    <string name="txt_fail">数据加载失败</string>
    <string name="txt_pic_fail">图片加载失败</string>
    <string name="txt_pic_fail_retry">图片加载失败,点击重新加载</string>
    <string name="txt_fail_detail">详细错误：</string>
    <string name="txt_exit_error">很抱歉,程序出现异常,即将退出.</string>
    <string name="txt_link_error">链接出错</string>
    <string name="txt_server_unknow_error">服务器未知异常</string>
    <string name="txt_input_check_ask">请输入正确的:</string>
    <string name="txt_input_check_msg_id">经理ID</string>
    <string name="txt_input_check_name">店员姓名</string>
    <string name="txt_input_check_mobile">手机号码</string>
    <string name="txt_input_check_email">邮箱地址</string>
    <string name="txt_input_check_store_id">门店ID</string>
    <string name="txt_line_dx">电信</string>
    <string name="txt_line_wt">网通</string>
    <string name="txt_remember_password">记住密码</string>
    <string name="txt_automatic_login">自动登录</string>
    <string name="ibtn_login">登 录</string>
    <string name="txt_login_failed">登陆失败</string>
    <string name="edt_input_username">请输入用户名</string>
    <string name="edt_input_password">请输入密码</string>
    <string name="login_login_failure">登录失败</string>
    <string name="login_account_not_null">用户名不能为空，请输入用户名</string>
    <string name="login_password_not_null">密码不能为空，请输入密码</string>
    <string name="login_password_at_least">密码长度不能小于6位</string>
    <string name="login_server_error">验证失败，用户名密码不准确</string>
    <string name="main_txt_current_store">当前门店</string>
    <string name="main_txt_select_store">请选择您的门店</string>
    <string name="main_txt_store_operaters">门店功能</string>
    <string name="main_txt_store_irep_edu">IREP培训</string>
    <string name="main_txt_store_irep_login">IREP登录</string>
    <string name="main_txt_store_info">门店资料</string>
    <string name="main_txt_store_product_find">产品速查</string>
    <string name="main_txt_store_sales_reportor">销量申报</string>
    <string name="main_txt_store_images_show">门店图片</string>
    <string name="main_txt_store_latest_activities">最新活动</string>
    <string name="main_txt_store_scan_code">扫一扫，知真伪</string>
    <string name="main_txt_store_no_choice">没有门店可选择</string>
    <string name="txt_leave_pushmore">再按一次退出程序</string>
    <string name="main_txt_store_choice">请先选择门店</string>
    <string name="main_txt_store_no_presentation">您没有门店，无法操作。</string>
    <string name="irep_txt_register">新用户注册</string>
    <string name="irep_txt_title">零售先锋登录窗口</string>
    <string name="irep_study_txt_title">IREP培训</string>
    <string name="store_txt_type">类型</string>
    <string name="store_txt_lvl">星级</string>
    <string name="store_txt_loc">地址</string>
    <string name="store_txt_loc_emu">上海市浦西牛头镇山西村马家乡119号2楼201室</string>
    <string name="store_txt_email">邮箱</string>
    <string name="store_txt_tel">电话</string>
    <string name="store_txt_more_info">更多信息</string>
    <string name="store_txt_sales">门店销量</string>
    <string name="store_txt_counts">门店积分</string>
    <string name="store_txt_clerks">我的店员</string>
    <string name="store_txt_photo">店面全景</string>
    <string name="product_find_txt_hint">请输入产品关键字</string>
    <string name="sales_reporte_uploading">正在上传销量，不能返回</string>
    <string name="sales_reporte_scan_ask">请扫描条码</string>
    <string name="sales_reporte_take_pic_ask">请拍照</string>
    <string name="txt_select_product_type">请选择品牌</string>
    <string name="txt_select_product_model">请选择型号</string>
    <string name="sales_reporte_result_title">验证结果</string>
    <string name="sales_reporte_result_content">无法验证</string>
    <string name="sales_reporte_go_reporte">继续上传</string>
    <string name="sales_reporte_reporte">上传</string>
    <string name="sales_reporte_save">保存到申报记录</string>
    <string name="sales_reporte_save_success">保存到申报记录成功!</string>
    <string name="sales_reporte_broad">品 牌：</string>
    <string name="sales_reporte_model">型 号：</string>
    <string name="sales_reporte_code">序列号：</string>
    <string name="sales_reporte_code_description">拍摄质保卡或产品：</string>
    <string name="sales_reporte_box_pic_description">盒装产品图片：</string>
    <string name="sales_reporte_history">申报记录</string>
    <string name="sales_reporte_how_scan">如何扫描？</string>
    <string name="sales_reporte_delete">删除</string>
    <string name="sales_reporte_uploaded">已上传</string>
    <string name="sales_reporte_not_uploaded">未上传</string>
    <string name="sales_reporte_active_id_">活动ID</string>
    <string name="sales_reporte_bar">条码:</string>
    <string name="sales_reporte_bar1">条码1</string>
    <string name="sales_reporte_bar2">条码2</string>
    <string name="sales_reporte_detail_title">销量详情</string>
    <string name="sales_reporte_detail_store_name">门   店：</string>
    <string name="sales_reporte_detail_person">申报人</string>
    <string name="sales_reporte_detail_date">申报日期</string>
    <string name="sales_reporte_detail_code">条码</string>
    <string name="sales_reporte_detail_pic">保单图片</string>
    <string name="sales_reporte_ask_location">开启定位有有利于积分加成，是否开启？</string>
    <string name="sales_reporte_location_off">不开启</string>
    <string name="sales_reporte_location_on">开启</string>
    <string name="personal_txt_personal_title">个人中心</string>
    <string name="personal_txt_change_password">修改密码</string>
    <string name="personal_txt_log_out">注销登录</string>
    <string name="personal_txt_private">隐私条款</string>
    <string name="personal_txt_update_check">检查更新</string>
    <string name="personal_txt_gps_open">开启GPS定位</string>
    <string name="personal_txt_gps_closed">定位已关闭</string>
    <string name="personal_txt_current_position">位置：</string>
    <string name="personal_txt_title">提示</string>
    <string name="personal_txt_clear_crash">清空缓存</string>
    <string name="personal_txt_clear_crash_finshed">清空完成</string>
    <string name="personal_txt_log_out_ask">注销并退出登录？</string>
    <string name="personal_txt_log_outting">正在注销 &#8230;</string>
    <string name="personal_txt_name">姓名：</string>
    <string name="personal_txt_position">职位：</string>
    <string name="personal_txt_telephone">电话：</string>
    <string name="personal_txt_email">邮箱：</string>
    <string name="txt_old_password">旧密码</string>
    <string name="txt_new_password">新密码</string>
    <string name="edt_input_oldpassword">请输入旧密码</string>
    <string name="edt_input_newpassword">请输入新密码</string>
    <string name="edt_input_password_again">请再次输入密码</string>
    <string name="password_old_null">旧密码不能为空</string>
    <string name="password_old_error">旧密码输入错误</string>
    <string name="password_new_null">新密码不能为空</string>
    <string name="password_repeat_null">重复新密码不能为空</string>
    <string name="password_not_same">两次密码输入不同</string>
    <string name="password_same">新密码和旧密码相同，请重新填写。</string>
    <string name="password_changed">修改成功</string>
    <string name="password_changed_error">修改失败</string>
    <string name="btn_change">确认</string>
    <string name="btn_cancel">取消</string>
    <string name="txt_pic_upload_type_choice">请选择您的图片类型</string>
    <string name="txt_pic_upload_taken">已拍图片</string>
    <string name="txt_pic_upload_comment">图片评论</string>
    <string name="txt_pic_upload_type">图片类型</string>
    <string name="txt_pic_upload_title">图片上传</string>
    <string name="txt_pic_upload_give_up">是否放弃上传已拍摄的照片？</string>
    <string name="txt_pic_upload_all_success">全部上传成功。</string>
    <string name="txt_pic_upload_fail">%1$s张图片上传失败</string>
    <string name="txt_pic_upload_start_time">开始时间:</string>
    <string name="txt_pic_upload_death_time">结束时间:</string>
    <string name="txt_pic_upload_round">%1$s年Q%2$s第%3$s轮</string>
    <string name="txt_pic_upload_time_pattern">yyyy年MM月dd日</string>
    <string name="txt_pic_upload_time_title">%1$s年%2$s月%3$s日"</string>
    <string name="txt_pic_upload_wv_nm_error">该季度解析出错</string>
    <string name="btn_send">发送</string>
    <string name="btn_finished">完成</string>
    <string name="btn_cont_take_pic">继续拍照</string>
    <string name="edt_comment_default_text">备注或者评论(最多140字)</string>
    <string name="photo_upload_recapture">重拍</string>
    <string name="photo_upload_finish">保存</string>
    <string name="txt_preview">预览</string>
    <string name="txt_take_picture">拍照</string>
    <string name="txt_take_picture_require">拍照要求</string>
    <string name="txt_take_picture_upload">需要上传</string>
    <string name="txt_take_picture_upload_num">需要上传%1$s张</string>
    <string name="txt_take_picture_upload_description">"需要上传%1$s张，已经上传%2$s张"</string>
    <string name="txt_pic_category_title">照片类型</string>
    <string name="txt_title_photo_type">照片类型</string>
    <string name="txt_pic_upload_least">至少上传%1$s张</string>
    <string name="photo_delete_ask">确认删除此图片？该操作无法恢复。</string>
    <string name="photo_deleted">图片删除成功。</string>
    <string name="photo_deleted_null">图片删除成功，当日没有任何图片。</string>
    <string name="photo_taker">拍摄者</string>
    <string name="photo_take_time">拍摄时间</string>
    <string name="photo_take_type">图片类型</string>
    <string name="photo_take_type_info">此处显示图片类型</string>
    <string name="photo_take_comment">评论信息</string>
    <string name="photo_take_comment_info">此处显示评论信息</string>
    <string name="photo_inloading">图片加载中 &#8230;</string>
    <string name="txt_store_image_recent_photo">近期图片</string>
    <string name="txt_store_image_current_quarter">当季度上传的轮次</string>
    <string name="scan_idification">扫一扫，知真伪</string>
    <string name="scan">扫一扫</string>
    <string name="scan_action">扫描</string>
    <string name="scan_error">扫描出错</string>
    <string name="scan_give_up">放弃扫描</string>
    <string name="scan_barcode">一维码扫描</string>
    <string name="scan_barcode_introduce">将一维码的图案放在取景框内，即可启动扫描。</string>
    <string name="scan_result">扫描结果：</string>
    <string name="upgrade_notification_title">零售宝最新版下载</string>
    <string name="upgrade_click2install">下载完成,点击安装。</string>
    <string name="upgrade_success">下载完成!</string>
    <string name="upgrade_fail_down">下载失败。</string>
    <string name="upgrade_start_download">开始下载</string>
    <string name="upgrade_downloading">正在下载</string>
    <string name="txt_name">姓名</string>
    <string name="txt_phonenumber">手机</string>
</resources>