<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_small"
    android:background="@drawable/list_item_bg_selector" >


    <ImageView
        android:contentDescription="@string/app_name"
        android:id="@+id/imageView1"
        android:layout_width="12.0dip"
        android:layout_height="12.0dip"
        android:layout_centerVertical="true"
        android:layout_alignParentRight="true"
        android:src="@drawable/arraw_gray_right" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/txt_clerk_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/v3_blue_soft"
            android:text="@string/txt_name"
            android:textSize="18sp" />
		<LinearLayout
    		android:layout_height="wrap_content"
    		android:layout_width="wrap_content"
    		android:orientation="horizontal">
      	  	<TextView
       	    	android:layout_width="match_parent"
       	     	android:layout_height="wrap_content"
            	android:text="@string/personal_txt_position"
            	android:textColor="@color/v3_black"
            	android:textSize="15sp" />
        	<TextView
            	android:id="@+id/txt_clerk_position"
            	android:layout_width="match_parent"
            	android:layout_height="wrap_content"
            	android:text="@string/txt_phonenumber"
            	android:textColor="@color/v3_black"
            	android:textSize="15sp" />
        </LinearLayout>
		<LinearLayout
    		android:layout_height="wrap_content"
    		android:layout_width="wrap_content"
    		android:orientation="horizontal">
      	  	<TextView
       	    	android:layout_width="match_parent"
       	     	android:layout_height="wrap_content"
            	android:text="@string/personal_txt_telephone"
            	android:textColor="@color/v3_black"
            	android:textSize="15sp" />
        	<TextView
            	android:id="@+id/txt_clerk_phone_number"
            	android:layout_width="match_parent"
            	android:layout_height="wrap_content"
            	android:text="@string/txt_phonenumber"
            	android:textColor="@color/v3_black"
            	android:textSize="15sp" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>