<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" 
    android:padding="@dimen/padding_small"
    android:background="@drawable/list_item_bg_selector"
    >

    <TextView
        android:id="@+id/txt_head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/store_txt_photo"
        android:textColor="@color/v3_blue_soft"
        android:textSize="22sp"
        android:layout_alignParentLeft="true"
         />

    <TextView
        android:id="@+id/txt_content_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:text="@string/test_text"
        android:textColor="@color/black"
        android:textSize="16sp" 
        android:textStyle=""
        android:layout_below="@id/txt_head"
        />

    <ImageView
        android:contentDescription="@string/app_name"
        android:layout_width="12.0dip"
        android:layout_height="12.0dip"
        android:layout_marginRight="10.0dip"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:src="@drawable/arraw_gray_right" />

</RelativeLayout>