<?xml version="1.0" encoding="UTF-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/base_white_ffffff_normal"
    android:isScrollContainer="true"
    android:orientation="vertical" >

    <!-- 第一个白框BEGIN -->

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="10.0dp" >

        <TextView
            android:id="@+id/txt_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/test_text"
            android:textColor="@color/v3_blue_soft"
            android:textSize="22.0sp" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_smaller"
            android:gravity="center_vertical"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personal_txt_position"
                android:textColor="@color/v3_black" />

            <TextView
                android:id="@+id/txt_clerk_position"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/v3_gray" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/ll_mylocal"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_smaller"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personal_txt_current_position"
                android:textColor="@color/v3_black"
                android:textSize="14.0sp" />

            <TextView
                android:id="@+id/txt_userlocal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/v3_gray"
                android:textSize="14.0sp" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1.0px"
        android:background="@drawable/shape_line" />

    <LinearLayout
        android:id="@+id/linear_edit_personindfo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/one_operator_selector"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="10.0dp"
        android:paddingTop="10.0dp" >

        <LinearLayout
            android:clickable="false"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            android:gravity="center_vertical"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/linear_clerk_phone_number"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_smaller"
                android:clickable="false"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="10.0dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/personal_txt_telephone"
                    android:textColor="@color/v3_black" />

                <TextView
                    android:id="@+id/txt_clerk_phone_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    android:textColor="@color/v3_gray" />
            </LinearLayout>

            <LinearLayout
                 android:clickable="false"
                android:id="@+id/linear_clerk_home_address"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/padding_smaller"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:paddingLeft="10.0dp" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/personal_txt_email"
                    android:textColor="@color/v3_black" />

                <com.intel.store.widget.EmailTextView
                    android:id="@+id/txt_clerk_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/v3_gray" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:layout_width="12.0dip"
            android:layout_height="12.0dip"
            android:layout_marginRight="10.0dip"
            android:contentDescription="@string/app_name"
            android:src="@drawable/arraw_gray_right" />
    </LinearLayout>

</LinearLayout>