<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/list_item_imagedir_selector"
    android:padding="@dimen/padding_small" >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/padding_small"
        android:layout_toLeftOf="@id/common_id_lv"
        android:orientation="vertical" >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5.0dip"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/txt_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10.0dip"
                android:text="@string/test_name"
                android:textColor="@color/base_three_blue_00aeef"
                android:textSize="18.0sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5.0dip"
            android:orientation="horizontal" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10.0dip"
                android:text="时间"
                android:textColor="@color/base_gray_595959"
                android:textSize="@dimen/text_middle" />
            <TextView
               android:id="@+id/txt_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10.0dip"
                android:text="2014年02月12日"
                android:textColor="@color/base_gray_595959"
                android:textSize="16.0sp" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5.0dip"
            android:orientation="horizontal" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10.0dip"
                android:text="@string/sales_reporte_bar"
                android:textColor="@color/base_gray_595959"
                android:textSize="@dimen/text_middle" />
            <TextView
                android:id="@+id/txt_barcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10.0dip"
                android:text="1111111111"
                android:textColor="@color/base_gray_595959"
                android:textSize="16.0sp" />
        </LinearLayout>
    </LinearLayout>
    <ImageView
        android:id="@id/common_id_lv"
        android:layout_width="12.0dip"
        android:layout_height="12.0dip"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="10.0dip"
        android:contentDescription="@string/app_name"
        android:src="@drawable/arraw_gray_right" />
</RelativeLayout>